--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "tailwindcss": "^3.3.3"
   },
   "scripts": {
-    "dev": "bun --watch index.js",
-    "run": "bun run index.js"
+    "dev": "bun --watch ./index.js",
+    "run": "bun run ./index.js"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
